changed both Git_notes.ipynb and hello.py

--- a/Git_notes.ipynb
+++ b/Git_notes.ipynb
@@ -36,7 +36,12 @@
     "```bash\n",
     "git diff\n",
     "```\n",
-    "\n"
+    "\n",
+    "* Cloning to remote repository: \n",
+    "```bash\n",
+    "git remote add origin git@github.com:joweirich/[new_repo_name].git\n",
+    "git push -u origin master\n",
+    "```\n"
    ]
   },
   {
